attempt to fix oversized image on iphone x

--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -44,7 +44,7 @@
             button {
                 align-self: center;
             }
-            svg {
+            .name {
                 width: 40%;
                 height: 40%;
             }
